--- a/_posts/2020-01-21-x86Assembly.markdown
+++ b/_posts/2020-01-21-x86Assembly.markdown
@@ -2,7 +2,7 @@
 layout: post
 title: x86汇编学习笔记
 date: 2020-02-19 11:17:58
-categories: Assembly
+category: Assembly
 tags: Assembly
 ---
 # x86汇编学习笔记 
